Add warning in select_profiles and update Tutorial 101
- Add warning message when no floats/profiles match the selection criteria of user
- Add more info about QC, filling the geolocation criteria in select_profiles and links for monitoring tools for BGC-Argo

--- a/Tutorial_101/Codes/Tutorial_OneArgoR101.Rmd
+++ b/Tutorial_101/Codes/Tutorial_OneArgoR101.Rmd
@@ -105,6 +105,17 @@ DOWN_IRRADIANCE380, DOWN_IRRADIANCE412,DOWN_IRRADIANCE443, DOWN_IRRADIANCE490,
 DOWN_IRRADIANCE555, DOWN_IRRADIANCE670, UP_RADIANCE, UP_RADIANCE412, 
 UP_RADIANCE443, UP_RADIANCE490, UP_RADIANCE555, DOWNWELLING_PAR, DOXY2, DOXY3
 
+For the geographical selection, you can use:
+- a box (lon_lim=c(min longitude, max longitude); 
+  lat_lim=c(min latitude, max latitude)<br>
+- a polygon selection (lon_lim= vector a longitude values, 
+  lat_lim = vector of corresponding latitude values)<br>
+
+For an overview of the available floats/parameters, we also recommend using 
+either monitoring tools:
+- https://maps.biogeochemical-argo.com/bgcargo/
+- https://fleetmonitoring.euro-argo.eu/dashboard?Status=Active
+
 ```{r}
 GoM_BGC = select_profiles(lon_lim = c(-96, -80),
                           lat_lim = c(17, 29),
@@ -136,6 +147,7 @@ A selection of flags measurements need to be specified (qc_flags).
 7) - not attributed -
 8) interpolated data
 9) no data
+QC 1,2,5,8 are the safer to use
 
 The 'raw' option defines which data mode should be used for the chosen variable
 raw = ‘yes_strict’, raw data only. 
